--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vchasno",
-  "version": "1.0.2",
+  "version": "1.0.3-release",
   "description": "",
   "author": "k5sha. Yurii Yevtushenko",
   "private": true,
